force-app/main/default/objects/Teacher__c/fields/Full_Gross_Salary_in_offer__c.field-meta.xml
<CustomField>
    <fullName>Full_Gross_Salary_in_offer__c</fullName>
    <label>Full Gross Salary in offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>