force-app/main/default/objects/Teacher__c/fields/last_Name__c.field-meta.xml
<CustomField>
    <fullName>last_Name__c</fullName>
    <label>last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>