force-app/main/default/objects/Teacher__c/fields/Type_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Employment__c</fullName>
    <label>Type of Employment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>